# BayesPA

./: .gitignore  .tags  README.md  medlda.html  setup.py
OnlineGibbsMedLDA/: CMakeLists.txt  Makefile  experiment.py
OnlineGibbsMedLDA/inc/: Corpus.h  Document.h  HybridMedLDA.h  HybridMedLDAmt.h  MVGaussian.h  Sample.h  defs.h  paMedLDAgibbs.h  paMedLDAgibbsWrapper.h  pyutils.h  stl.h  utils.h
OnlineGibbsMedLDA/src/: Corpus.cpp  Document.cpp  HybridMedLDA.cpp  InverseGaussian.cpp  Makefile  Sample.cpp  cholesky.cpp  main.cpp  paMedLDAgibbs.cpp  paMedLDAgibbsWrapper.cpp
OnlineGibbsMedLDA/test/: test.py  test_pyutils.cpp
OnlineGibbsMedLDA/visualize_dist_paMedLDAgibbs_0/: 0_1.eps  10_1.eps  11_1.eps  12_1.eps  13_1.eps  14_1.eps  15_1.eps  16_1.eps  17_1.eps  18_1.eps  19_1.eps  1_1.eps  2_1.eps  3_1.eps  4_1.eps  5_1.eps  6_1.eps  7_1.eps  8_1.eps  9_1.eps  visualize_topic.mat
OnlineGibbsMedLDAGrad/: CMakeLists.txt  experiment.py  testdb.py
OnlineGibbsMedLDAGrad/inc/: HybridMedLDA.h  Mapper.h
OnlineGibbsMedLDAGrad/src/: HybridMedLDA.cpp  Makefile  Mapper.cpp  paMedLDAgibbsWrapper.cpp
OnlineGibbsMedLDAGrad/visualize_dist_paMedLDAgibbs_0/: 0_0.eps  0_1.eps  0_22.eps  0_8.eps  10_0.eps  10_1.eps  10_22.eps  10_8.eps  11_0.eps  11_1.eps  11_22.eps  11_8.eps  12_0.eps  12_1.eps  12_22.eps  12_8.eps  13_0.eps  13_1.eps  13_22.eps  13_8.eps  14_0.eps  14_1.eps  14_22.eps  14_8.eps  15_0.eps  15_1.eps  15_22.eps  15_8.eps  16_0.eps  16_1.eps  16_22.eps  16_8.eps  17_0.eps  17_1.eps  17_22.eps  17_8.eps  18_0.eps  18_1.eps  18_22.eps  18_8.eps  (+42 more)
OnlineGibbsMedLDAGrad/visualize_dist_paMedLDAgibbs_1/: 0_0.eps  0_1.eps  0_22.eps  0_8.eps  10_0.eps  10_1.eps  10_22.eps  10_8.eps  11_0.eps  11_1.eps  11_22.eps  11_8.eps  12_0.eps  12_1.eps  12_22.eps  12_8.eps  13_0.eps  13_1.eps  13_22.eps  13_8.eps  14_0.eps  14_1.eps  14_22.eps  14_8.eps  15_0.eps  15_1.eps  15_22.eps  15_8.eps  16_0.eps  16_1.eps  16_22.eps  16_8.eps  17_0.eps  17_1.eps  17_22.eps  17_8.eps  18_0.eps  18_1.eps  18_22.eps  18_8.eps  (+42 more)
OnlineGibbsMedLDAGrad/visualize_dist_paMedLDAgibbs_6/: 0_0.eps  0_1.eps  0_22.eps  0_8.eps  10_0.eps  10_1.eps  10_22.eps  10_8.eps  11_0.eps  11_1.eps  11_22.eps  11_8.eps  12_0.eps  12_1.eps  12_22.eps  12_8.eps  13_0.eps  13_1.eps  13_22.eps  13_8.eps  14_0.eps  14_1.eps  14_22.eps  14_8.eps  15_0.eps  15_1.eps  15_22.eps  15_8.eps  16_0.eps  16_1.eps  16_22.eps  16_8.eps  17_0.eps  17_1.eps  17_22.eps  17_8.eps  18_0.eps  18_1.eps  18_22.eps  18_8.eps  (+42 more)
OnlineMedLDA/: .tags  1.eps  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cmd.txt  experiment.py  libbayespa.dylib  test
OnlineMedLDA/inc/: Corpus.h  paMedLDAave.h  paMedLDAaveWrapper.h
OnlineMedLDA/inc/utils/: InverseGaussian.h  ap.h  debug.h  utils.h
OnlineMedLDA/src/: Corpus.cpp  Makefile  cmake_install.cmake  main.cpp  paMedLDAave.cpp  paMedLDAaveWrapper.cpp
OnlineMedLDA/src/utils/: InverseGaussian.cpp  MVGaussian.cpp  Makefile  cmake_install.cmake  objcokus.cpp
OnlineMedLDA/visualize_dist_paMedLDAave/: 0_0.eps  0_1.eps  0_10.eps  0_11.eps  0_12.eps  0_13.eps  0_14.eps  0_15.eps  0_16.eps  0_17.eps  0_18.eps  0_19.eps  0_2.eps  0_3.eps  0_4.eps  0_5.eps  0_6.eps  0_7.eps  0_8.eps  0_9.eps  1_0.eps  1_1.eps  1_10.eps  1_11.eps  1_12.eps  1_13.eps  1_14.eps  1_15.eps  1_16.eps  1_17.eps  1_18.eps  1_19.eps  1_2.eps  1_3.eps  1_4.eps  1_5.eps  1_6.eps  1_7.eps  1_8.eps  1_9.eps  (+161 more)
OnlineMedLDA/visualize_dist_paMedLDAave_0/: 0_1.eps  0_11269.eps  0_16.eps  0_256.eps  0_4096.eps  10_1.eps  10_11269.eps  10_16.eps  10_256.eps  10_4096.eps  11_1.eps  11_11269.eps  11_16.eps  11_256.eps  11_4096.eps  12_1.eps  12_11269.eps  12_16.eps  12_256.eps  12_4096.eps  13_1.eps  13_11269.eps  13_16.eps  13_256.eps  13_4096.eps  14_1.eps  14_11269.eps  14_16.eps  14_256.eps  14_4096.eps  15_1.eps  15_11269.eps  15_16.eps  15_256.eps  15_4096.eps  16_1.eps  16_11269.eps  16_16.eps  16_256.eps  16_4096.eps  (+62 more)
OnlineMedLDA/visualize_dist_paMedLDAave_1/: 0_1.eps  0_11269.eps  0_16.eps  0_256.eps  0_4096.eps  10_1.eps  10_11269.eps  10_16.eps  10_256.eps  10_4096.eps  11_1.eps  11_11269.eps  11_16.eps  11_256.eps  11_4096.eps  12_1.eps  12_11269.eps  12_16.eps  12_256.eps  12_4096.eps  13_1.eps  13_11269.eps  13_16.eps  13_256.eps  13_4096.eps  14_1.eps  14_11269.eps  14_16.eps  14_256.eps  14_4096.eps  15_1.eps  15_11269.eps  15_16.eps  15_256.eps  15_4096.eps  16_1.eps  16_11269.eps  16_16.eps  16_256.eps  16_4096.eps  (+62 more)
data/: binary_test.gml  binary_train.gml  wiki_test.gml
lab/: accuracy-degradation-big-topics.ipynb  binary_large_topics.py  utils.py
medlda/: __init__.py
medlda/OnlineGibbsMedLDA/: CMakeLists.txt  Makefile  bayespaTest  topic.m  topic_all_tsne.m  topic_all_tsne.m~  topic_tsne.m
medlda/OnlineGibbsMedLDA/inc/: OnlineGibbsMedLDA.h  OnlineGibbsMedLDAWrapper.h  OnlineGibbsMedLDAmtWrapper.h
medlda/OnlineGibbsMedLDA/inc/utils/: Corpus.h  Sample.h  Setting.h  apaux.h  cholesky.h  cokus.h  debug.h  experiment.h  gammaln.h  objcokus.h  pyutils.h  spdinverse.h  stl.h  utils.h
medlda/OnlineGibbsMedLDA/src/: Makefile  OnlineGibbsMedLDA.cpp  OnlineGibbsMedLDAWrapper.cpp  OnlineGibbsMedLDAmtWrapper.cpp  PythonWrapper.cpp
medlda/OnlineGibbsMedLDA/src/utils/: MVGaussian.cpp  Sample.cpp  Setting.cpp  ap.cpp  cokus.cpp  spdinverse.cpp
medlda/OnlineGibbsMedLDA/test/: run_mc.py  test.py
test/: test.py
